# gfm-analyzer

./: Cargo.toml  README.md  flake.nix
crates/gfm-syntax/: Cargo.toml  README.md
crates/gfm-syntax/proptest-regressions/grammer/: am.txt  mod.txt
crates/gfm-syntax/src/: highlight.rs  kind.rs  lex.rs  lib.rs  main.rs  node.rs  parser.rs
crates/gfm-syntax/src/grammer/: README.md  am.rs  example.rs  leaf.rs  mod.rs
crates/gfm-syntax/tests/: atx_headings.rs  blank_lines.rs  block_quote.rs  code_spans.rs  hard_line_breaks.rs  links.rs  one_to_100.rs  paragraphs.rs
crates/gfm-syntax/tests/snapshots/ath_heading/: example_32.snap  example_32.snap.new  example_33.snap  example_33.snap.new  example_34.snap  example_34.snap.new  example_35.snap  example_35.snap.new  example_36.snap  example_36.snap.new  example_37.snap  example_37.snap.new  example_38.snap  example_38.snap.new  example_39.snap  example_39.snap.new  example_40.snap  example_41.snap  example_41.snap.new  example_42.snap  example_42.snap.new  example_43.snap  example_43.snap.new  example_44.snap  example_44.snap.new  example_45.snap  example_45.snap.new  example_46.snap  example_46.snap.new  example_47.snap  example_47.snap.new  example_48.snap  example_48.snap.new  example_49.snap  example_49.snap.new
crates/gfm-syntax/tests/snapshots/blank_lines/: example_196.snap  example_196.snap.new
crates/gfm-syntax/tests/snapshots/blanklines/: example_197.snap
crates/gfm-syntax/tests/snapshots/block_quotes/: example_206.snap  example_207.snap  example_208.snap  example_214.snap.new
crates/gfm-syntax/tests/snapshots/code_spans/: example_338.snap  example_339.snap
crates/gfm-syntax/tests/snapshots/fenced_code_blocks/: example_100.snap  example_101.snap  example_102.snap  example_103.snap  example_105.snap  example_106.snap
crates/gfm-syntax/tests/snapshots/hard_line_breaks/: example_658.snap  example_658.snap.new  example_665.snap  example_666.snap
crates/gfm-syntax/tests/snapshots/indented_code_blocks/: example_77.snap  example_81.snap  example_82.snap  example_83.snap  example_84.snap  example_86.snap  example_87.snap  example_88.snap
crates/gfm-syntax/tests/snapshots/lexer/: auto.snap  auto.snap.new
crates/gfm-syntax/tests/snapshots/paragraph/: example_189.snap  example_189.snap.new  example_190.snap  example_190.snap.new  example_191.snap  example_191.snap.new  example_192.snap  example_192.snap.new  example_193.snap  example_193.snap.new  example_194.snap  example_194.snap.new  example_195.snap  example_195.snap.new  example_196.snap  example_196.snap.new
(+16 files in other folders)
