
[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
description = "A laguage sever for github flavored markdown"
homepage = "https://github.com/abhinandh-s/gfm-analyzer"
documentation = "https://github.com/abhinandh-s/gfm-analyzer"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "utility"]

[workspace]
resolver = "3"
members = [
  "crates/gfm-analyzer",
  "crates/gfm-syntax"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
ecow = "0.2"
dashmap = "6.1"
env_logger = "0.11"
serde_json = "1.0"
ropey = "1.6"
gfm-syntax = { path = "crates/gfm-syntax", features = ["tower-lsp"] }
tower-lsp = "0.20"
tokio = { version = "1.48", features = ["full"] }
tracing-subscriber = "0.3"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false

[workspace.lints.rust]
unsafe_code = "warn"
unused_labels = "allow"
unreachable_pub = "deny"

[workspace.lints.clippy]
perf = "deny"
unwrap_used = "deny"
expect_used = "deny"
or_then_unwrap = "deny"
panicking_unwrap = "deny"
get_unwrap = "deny"
enum_glob_use = "deny"
redundant_closure = "deny"
str_to_string = "deny"
